--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "agora-rtc-sdk-ng": "^4.22.0",
+    "agora-rtm": "^2.2.0",
+    "agora-rtm-react": "^1.1.2",
+    "agora-rtm-sdk": "^2.1.10",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
